upd-flow: startSession addWallet  pay checkStataus
